[gd_scene load_steps=6 format=3 uid="uid://bxbfiqlw0o0yb"]

[ext_resource type="Script" path="res://scenes/environment/BoostArea.gd" id="1_l0yu7"]
[ext_resource type="PackedScene" uid="uid://dofl1inqyu0l2" path="res://scenes/effects/EngineBoostEffect/BoostAreaEffect.tscn" id="2_wuqk5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eqh4f"]
transparency = 1
albedo_color = Color(1, 0.137255, 0.235294, 0.0705882)

[sub_resource type="BoxMesh" id="BoxMesh_nyr3o"]
material = SubResource("StandardMaterial3D_eqh4f")

[sub_resource type="BoxShape3D" id="BoxShape3D_hsoq5"]

[node name="BoostArea" type="Area3D"]
script = ExtResource("1_l0yu7")
boostEffect = ExtResource("2_wuqk5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_nyr3o")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_hsoq5")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
